--- a/EssentialLessons/Lesson_10/Task4/Task4/Task4.csproj
+++ b/EssentialLessons/Lesson_10/Task4/Task4/Task4.csproj
@@ -42,6 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extention.cs" />
+    <Compile Include="IMyList.cs" />
+    <Compile Include="MyList.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
