--- a/EssentialLessons/Fiddle/Move/Move/Move.csproj
+++ b/EssentialLessons/Fiddle/Move/Move/Move.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bonus.cs" />
+    <Compile Include="Game.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="Program.cs" />
