--- a/EssentialLessons/Fiddle/ReadingFromFile/ReadingFromFile/ReadingFromFile.csproj
+++ b/EssentialLessons/Fiddle/ReadingFromFile/ReadingFromFile/ReadingFromFile.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6F1ED083-B718-4699-B716-4CC8D138A345}</ProjectGuid>
+    <ProjectGuid>{13E8CB8C-0C2E-4DF0-A6D0-8EA4F9C081D6}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Move</RootNamespace>
-    <AssemblyName>Move</AssemblyName>
+    <RootNamespace>ReadingFromFile</RootNamespace>
+    <AssemblyName>ReadingFromFile</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,11 +42,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bonus.cs" />
-    <Compile Include="Game.cs" />
-    <Compile Include="Map.cs" />
-    <Compile Include="MapFromFile.cs" />
-    <Compile Include="Point.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
