--- a/EssentialLessons/Fiddle/Move/Move/Move.csproj
+++ b/EssentialLessons/Fiddle/Move/Move/Move.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Bonus.cs" />
     <Compile Include="Game.cs" />
+    <Compile Include="Level.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="MapFromFile.cs" />
     <Compile Include="Point.cs" />
