--- a/Selenium/SeleniumTutorialY1/SeleniumTutorialY1/SeleniumTutorialY1.csproj
+++ b/Selenium/SeleniumTutorialY1/SeleniumTutorialY1/SeleniumTutorialY1.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
+    <Compile Include="PropertiesCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SeleniumGetMethods.cs" />
     <Compile Include="SeleniumSetMethods.cs" />
