--- a/Selenium/SeleniumTutorialY1/SeleniumTutorialY1/SeleniumTutorialY1.csproj
+++ b/Selenium/SeleniumTutorialY1/SeleniumTutorialY1/SeleniumTutorialY1.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SeleniumGetMethods.cs" />
     <Compile Include="SeleniumSetMethods.cs" />
+    <Compile Include="EAPageObject.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
