--- a/EssentialLessons/Fiddle/ImageGrid/ImageGrid/packages.config
+++ b/EssentialLessons/Fiddle/ImageGrid/ImageGrid/packages.config
@@ -16,9 +16,10 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net461" />
-  <package id="Microsoft.EntityFrameworkCore" version="2.2.3" targetFramework="net461" />
-  <package id="Microsoft.EntityFrameworkCore.Abstractions" version="2.2.3" targetFramework="net461" />
-  <package id="Microsoft.EntityFrameworkCore.Analyzers" version="2.2.3" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore" version="2.2.4" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.Abstractions" version="2.2.4" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.Analyzers" version="2.2.4" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.InMemory" version="2.2.4" targetFramework="net461" />
   <package id="Microsoft.EntityFrameworkCore.Relational" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Caching.Memory" version="2.2.0" targetFramework="net461" />
