--- a/EssentialLessons/Fiddle/ToDoApi MSDN/TodoApi/TodoApi/TodoApi.csproj
+++ b/EssentialLessons/Fiddle/ToDoApi MSDN/TodoApi/TodoApi/TodoApi.csproj
@@ -230,6 +230,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\TodoContext.cs" />
     <Compile Include="Models\TodoItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
