--- a/EssentialLessons/MSDN Projects/RazorPagesMovie/RazorPagesMovie/appsettings.json
+++ b/EssentialLessons/MSDN Projects/RazorPagesMovie/RazorPagesMovie/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RazorPagesMovieContext": "Server=(localdb)\\mssqllocaldb;Database=RazorPagesMovieContext-16905be2-7038-40c7-bda4-420be586b917;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
