--- a/Selenium/C#ForSelenium/A1/B1/B1.csproj
+++ b/Selenium/C#ForSelenium/A1/B1/B1.csproj
@@ -43,8 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Browsers\Chrome.cs" />
+    <Compile Include="Browsers\Firefox.cs" />
+    <Compile Include="Browsers\IE.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Selenium\IWebDriver.cs" />
+    <Compile Include="Selenium\WebDriver.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
