--- a/Selenium/C#ForSelenium/A1/B1/B1.csproj
+++ b/Selenium/C#ForSelenium/A1/B1/B1.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Selenium\IWebDriver.cs" />
     <Compile Include="Selenium\WebDriver.cs" />
+    <Compile Include="ExtentionMethods\WebDriverExtention.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
