--- a/Selenium/C#ForSelenium/A1/B1/B1.csproj
+++ b/Selenium/C#ForSelenium/A1/B1/B1.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Browsers\Chrome.cs" />
     <Compile Include="Browsers\Firefox.cs" />
     <Compile Include="Browsers\IE.cs" />
+    <Compile Include="CollectionExample.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Selenium\IWebDriver.cs" />
