--- a/Selenium/SeleniumFirst/SeleniumFirst/packages.config
+++ b/Selenium/SeleniumFirst/SeleniumFirst/packages.config
@@ -3,4 +3,5 @@
   <package id="NUnit" version="3.12.0" targetFramework="net461" />
   <package id="Selenium.Chrome.WebDriver" version="74.0.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="75.0.3770.90" targetFramework="net461" />
 </packages>
