--- a/Selenium/SeleniumFirst/SeleniumFirst/packages.config
+++ b/Selenium/SeleniumFirst/SeleniumFirst/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="NUnit" version="3.12.0" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net461" />
   <package id="Selenium.Chrome.WebDriver" version="74.0.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver.ChromeDriver" version="75.0.3770.90" targetFramework="net461" />
