--- a/Selenium/SeleniumFirst/SeleniumFirst/SeleniumFirst.csproj
+++ b/Selenium/SeleniumFirst/SeleniumFirst/SeleniumFirst.csproj
@@ -52,10 +52,14 @@
     <Reference Include="WebDriver, Version=3.141.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Selenium.WebDriver.3.141.0\lib\net45\WebDriver.dll</HintPath>
     </Reference>
+    <Reference Include="WebDriver.Support, Version=3.141.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selenium.Support.3.141.0\lib\net45\WebDriver.Support.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SeleniumSetMethods.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
