--- a/Selenium/RestSharp/RestSharpWeather/RestSharpWeather/RestSharpWeather.csproj
+++ b/Selenium/RestSharp/RestSharpWeather/RestSharpWeather/RestSharpWeather.csproj
@@ -11,7 +11,9 @@
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.0.1" />
+    <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="RestSharp" Version="106.6.10" />
+    <PackageReference Include="SpecFlow" Version="3.1.74" />
   </ItemGroup>
 
 </Project>
